packages/installer/manifests/thirdpartyapps/rafiki-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp:
  labels:
    mojaloop.service: rafiki-svc
    mojaloop.layer: thirdpartyapps
  name: rafiki-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      mojaloop.service: rafiki-svc
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      creationTimestamp:
      labels:
        mojaloop.service: rafiki-svc
        mojaloop.layer: thirdpartyapps
    spec:
      containers:
      - env:
        - name: FSIOP_URL
          value: http://fspiop-api-svc:4000
        image: mojaloop/thirdparty-api-bc-rafiki-fspiop-connector-api-svc:0.0.4
        name: rafiki-svc
        ports:
        - containerPort: 9001
        resources: {}
      restartPolicy: Always
      volumes:
status: {}
