packages/installer/manifests/thirdpartyapps/rafiki-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
    mojaloop.service: rafiki-svc
    mojaloop.layer: thirdpartyapps
  name: rafiki-svc
spec:
  ports:
    - name: "9001"
      port: 9001
      targetPort: 9001
  selector:
    mojaloop.service: rafiki-svc
status:
  loadBalancer: {}
