packages/installer/manifests/thirdpartyapps/rafiki-svc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rafiki-svc
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: rafiki.local
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: rafiki-svc
            port:
              number: 9001
